--- a/ec2.yaml
+++ b/ec2.yaml
@@ -1,2 +1,14 @@
 ---
-- name: ec2 install
+- name: install nginx
+  hosts: all
+  become: true
+  become_user: root
+  tasks:
+  - name: install nginx
+    yum:
+      name: nginx
+      state: present
+    service:
+      name: nginx
+      state: started
+
