--- a/httpd.yaml
+++ b/httpd.yaml
@@ -2,8 +2,12 @@
 - name: install httpd
   become: true
   become_user: root
-  -name: httpd install
-   yum:
-   service:
-    name: httpd 
-    state: presenet
+  tasks:
+  - name: httpd
+    yum:
+      name: httpd 
+      state: presenet
+    service:
+      name: httpd 
+      state: start
+      
